@@ -1700,7 +1700,7 @@ const char *ConvertToAscii(const UTF8 *pString)
 #define CS_NORMAL     (CS_FG_DEFAULT|CS_BG_DEFAULT)
 #define CS_NOBLEED    (CS_FG_WHITE|CS_BG_DEFAULT)
 
-const MUX_COLOR_SET aColors[COLOR_LAST_CODE+1] = 
+const MUX_COLOR_SET aColors[COLOR_LAST_CODE+1] =
 {
     { 0,             0,             "",            0,                       T(""),               0, T(""),    0}, // COLOR_NOTCOLOR
     { CS_NORMAL,     CS_ALLBITS,    ANSI_NORMAL,   sizeof(ANSI_NORMAL)-1,   T(COLOR_RESET),      3, T("%xn"), 3}, // COLOR_INDEX_RESET
@@ -5431,7 +5431,7 @@ void mux_string::compress(const UTF8 *ch)
     LBUF_OFFSET nChar = utf8_FirstByte[ch[0]];
     LBUF_OFFSET k;
 
-    do
+    while (i < m_iLast)
     {
         if (m_autf[i.m_byte] == ch[0])
         {
@@ -5457,7 +5457,8 @@ void mux_string::compress(const UTF8 *ch)
                 delete_Chars(i, j);
             }
         }
-    } while (cursor_next(i));
+        cursor_next(i);
+    }
 }
 
 /*! \brief Compress each run of consecutive whitespace characters to a
@@ -5472,7 +5473,7 @@ void mux_string::compress(const UTF8 *ch)
 void mux_string::compress_Spaces(void)
 {
     mux_cursor i = CursorMin, j = CursorMin;
-    do
+    while (i < m_iLast)
     {
         if (mux_isspace(m_autf[i.m_byte]))
         {
@@ -5490,7 +5491,8 @@ void mux_string::compress_Spaces(void)
                 delete_Chars(i, j);
             }
         }
-    } while (cursor_next(i));
+    }
+    cursor_next(i);
 }
 
 /*! \brief Delete a range of characters.
@@ -5721,7 +5723,7 @@ LBUF_OFFSET mux_string::export_TextColor
     {
         return export_TextPlain(pBuffer, iStart, iEnd, nBytesMax);
     }
-    bool bPlentyOfRoom = (nBytesMax > 
+    bool bPlentyOfRoom = (nBytesMax >
         static_cast<size_t>(nBytesWanted + (COLOR_MAXIMUM_BINARY_TRANSITION_LENGTH * nPointsWanted) + COLOR_MAXIMUM_BINARY_NORMAL + 1));
     mux_cursor iPos = iStart, iCopy = iStart;
     size_t nTransition = 0;
@@ -5859,7 +5861,7 @@ UTF8 *mux_string::export_TextConverted
 
     if (bPlentyOfRoom)
     {
-        do
+        while (curIn < m_iLast)
         {
             csCurrent = m_pcs[curIn.m_point];
             if (csPrev != csCurrent)
@@ -5870,7 +5872,7 @@ UTF8 *mux_string::export_TextConverted
                     memcpy(Buffer + iOut, m_autf + iCopy.m_byte, nCopy);
                     iOut += nCopy;
                     iCopy = curIn;
-                }            
+                }
                 pTransition = ColorTransitionANSI( csPrev, csCurrent,
                                                    &nTransition, bNoBleed);
                 if (nTransition)
@@ -5880,7 +5882,8 @@ UTF8 *mux_string::export_TextConverted
                 }
                 csPrev = csCurrent;
             }
-        } while (cursor_next(curIn));
+            cursor_next(curIn);
+        }
 
         if (iCopy < curIn)
         {
@@ -5901,7 +5904,7 @@ UTF8 *mux_string::export_TextConverted
     size_t nNeededAfter = 0;
     bool bNearEnd = false;
     LBUF_OFFSET nChar = 0;
-    do
+    while (curIn < m_iLast)
     {
         csCurrent = m_pcs[curIn.m_point];
         if (csPrev != csCurrent)
@@ -5947,7 +5950,8 @@ UTF8 *mux_string::export_TextConverted
         }
         memcpy(Buffer + iOut, m_autf + curIn.m_byte, nChar);
         iOut += nChar;
-    } while (cursor_next(curIn));
+        cursor_next(curIn);
+    }
 
     if (  csPrev != CS_NORMAL
        && iOut + nNormal < sizeof(Buffer))
